--- a/SparkClrPoc/SparkClrPoc.csproj
+++ b/SparkClrPoc/SparkClrPoc.csproj
@@ -107,6 +107,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="config.txt" />
+    <Content Include="Data\foo.txt" />
     <Content Include="Data\SacramentocrimeJanuary2006.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
